--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "firebase": "^9.23.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xng-breadcrumb": "^10.0.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
